manifest/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.1-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: db
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: config-volume
          configMap:
            name: db-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - name: db
    port: 5432
    protocol: TCP
    targetPort: db
  selector:
    app: postgres
  sessionAffinity: None
  type: ClusterIP
